Quiet this warning for the one known case that it fires since we do a passable job of handling this case anyway. bug 341320, r+sr=sicking